Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmKy4UhT3RfSR+vdkDYpCI",
+      "authorship_tag": "ABX9TyPdXZYGkXKY/s22g8cXfLyk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1163,6 +1163,193 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# 整数\n",
+        "# 自然数 N が相異なる素数 a_1,a_2,a_3,\\cdots,a_k を用いて \n",
+        "# N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} と素因数分解されるとき、\n",
+        "# N の約数の個数は (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \n",
+        "# また、その約数の総和は \n",
+        "# (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \n",
+        "# = \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k}\n",
+        "%%latex\n",
+        "\\text{When }N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n",
+        "\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n",
+        "\\text{The number of divisors} = (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n",
+        "\\text{The sum of divisors} \\\\\n",
+        "\\quad = (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\[0.8em]\n",
+        "\\displaystyle\n",
+        "\\quad = \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \n",
+        "        \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \n",
+        "        \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k} \\\\\n"
+      ],
+      "metadata": {
+        "id": "HGZrC8cEEh1U",
+        "outputId": "f78fe206-2c19-446d-f2ca-70b5733f4579",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 157
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\text{When }N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n\\text{The number of divisors} = (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n\\text{The sum of divisors} \\\\\n\\quad = (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\[0.8em]\n\\displaystyle\n\\quad = \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \n        \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \n        \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k} \\\\"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 自然数 Q, N に対し、1 以上 Q以下の N の倍数の個数\n",
+        "# \\rfloor Q \\div N \\lfloor\n",
+        "# ただし、\\rfloor x \\lfloorは x 以下最大の整数を表す\n",
+        "# 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n",
+        "# \\lfloor Q \\div N \\rfloor - \\lfloor (P-1) \\div N \\rfloor\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "Q, N \\in \\mathbf N, \\quad N \\text{multiples between 1 and Q} \n",
+        "= \\left \\lfloor \\frac{Q}{N} \\right \\rfloor \\\\[0.8em]\n",
+        "\\lfloor x \\rfloor means the largest integer under x \\\\[0.8em]\n",
+        "\n",
+        "P, Q, N \\in \\mathbf N, \\quad N \\text{multiples between P and Q} \\\\[0.8em]\n",
+        "\\left \\lfloor \\frac{Q}{N} \\right \\rfloor - \\left \\lfloor \\frac{(P-1)}{N} \\right \\rfloor"
+      ],
+      "metadata": {
+        "id": "JFtWoy0M88Zu",
+        "outputId": "b336cc13-229c-4447-f17b-e0eb95416a31",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nQ, N \\in \\mathbf N, \\quad N \\text{multiples between 1 and Q} \n= \\left \\lfloor \\frac{Q}{N} \\right \\rfloor \\\\[0.8em]\n\\lfloor x \\rfloor means the largest integer under x \\\\[0.8em]\n\nP, Q, N \\in \\mathbf N, \\quad N \\text{multiples between P and Q} \\\\[0.8em]\n\\left \\lfloor \\frac{Q}{N} \\right \\rfloor - \\left \\lfloor \\frac{(P-1)}{N} \\right \\rfloor"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n",
+        "# ab = lg \n",
+        "# 奇数の和\n",
+        "# 1+3+5+\\cdots+(2n-1)=n^2 \n",
+        "# a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n",
+        "# x = bk , y = -ak （kは整数）\n",
+        "%%latex\n",
+        "ab = lg \\quad \\text{where}\\quad a, b \\in \\mathbf Z,\\quad l = lcm, \\quad g = gcd \\\\\n",
+        "1 + 3 + 5 + \\cdots + (2n - 1) = n^2 \\\\\n",
+        "\\text{When } a,b \\text{ are coprimes,} \\quad ax + by = 0 \\Longrightarrow\n",
+        "x = bk , y = -ak  \\quad \\text{where} \\quad x, y, k \\in \\mathbf Z\n"
+      ],
+      "metadata": {
+        "id": "dlpHhKhO-98D",
+        "outputId": "b2f68bbd-73c9-4285-bbb3-2749e4b49104",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 82
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "ab = lg \\quad \\text{where}\\quad a, b \\in \\mathbf Z,\\quad l = lcm, \\quad g = gcd \\\\\n1 + 3 + 5 + \\cdots + (2n - 1) = n^2 \\\\\n\\text{When } a,b \\text{ are coprimes,} \\quad ax + by = 0 \\Longrightarrow\nx = bk , y = -ak  \\quad \\text{where} \\quad x, y, k \\in \\mathbf Z"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 分数\n",
+        "%%latex\n",
+        "\\displaystyle \\frac{1}{(x+a)(x+b)} \n",
+        "= \\frac{1}{b-a}\\left(\\frac{1}{x+a}-\\frac{1}{x+b}\\right) \\qquad (a\\not=b) \\\\[0.8em]\n",
+        "\\displaystyle \\frac{1}{k(k+1)} = \\frac{1}{k}-\\frac{1}{k+1} "
+      ],
+      "metadata": {
+        "id": "lHK7qFTiFFUw",
+        "outputId": "484a650c-2ece-4d80-9903-b14b9861c3db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle \\frac{1}{(x+a)(x+b)} \n= \\frac{1}{b-a}\\left(\\frac{1}{x+a}-\\frac{1}{x+b}\\right) \\qquad (a\\not=b) \\\\[0.8em]\n\\displaystyle \\frac{1}{k(k+1)} = \\frac{1}{k}-\\frac{1}{k+1} \n"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 複素数\n",
+        "# オイラーの公式 Euler's formula 指数関数と三角関数の関係式\n",
+        "# \\displaystyle e^{i\\theta}=\\cos \\theta + i \\sin \\theta  \n",
+        "# オイラーの等式 Euler's identity\n",
+        "# \\displaystyle e^{\\pi i} = -1  \n",
+        "# 複素数のべき乗 ド・モアブルの定理\n",
+        "# (\\cos \\theta + i \\sin \\theta)^n = \\cos ( n \\theta) + i \\sin (n \\theta) \n",
+        "%%latex\n",
+        "\\displaystyle e^{i\\theta}=\\cos \\theta + i \\sin \\theta  \\\\\n",
+        "\\displaystyle e^{\\pi i} = -1  \\\\\n",
+        "(\\cos \\theta + i \\sin \\theta)^n = \\cos ( n \\theta) + i \\sin (n \\theta) \\\\"
+      ],
+      "metadata": {
+        "id": "BBJ15STpNlfx",
+        "outputId": "775f0f6b-26cf-4410-9342-fcc4d739d76e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 82
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle e^{i\\theta}=\\cos \\theta + i \\sin \\theta  \\\\\n\\displaystyle e^{\\pi i} = -1  \\\\\n(\\cos \\theta + i \\sin \\theta)^n = \\cos ( n \\theta) + i \\sin (n \\theta) \\\\"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -1174,51 +1361,36 @@
     {
       "cell_type": "code",
       "source": [
-        "# 整数\n",
-        "# 自然数 N が相異なる素数 a_1,a_2,a_3,\\cdots,a_k を用いて N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} と素因数分解されるとき、\n",
-        "# N の約数の個数は (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \n",
-        "# また、その約数の総和は \n",
-        "# (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \n",
-        "# = \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k}\n",
-        "# 自然数 Q, N に対し、1 以上 Q以下の N の倍数の個数は\n",
-        "# [Q \\div N]  \n",
-        "# ただし、 [x] はガウス記号ha\n",
-        "# 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n",
-        "# [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n",
-        "# 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n",
-        "# ab = lg \n",
-        "# 奇数の和\n",
-        "# 1+3+5+\\cdots+(2n-1)=n^2 \n",
-        "# a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n",
-        "# x = bk , y = -ak （kは整数）\n",
+        "# 行列\n",
+        "# $E$を2次単位行列、 $O$ を $2 \\times 2$ の零行列とすると、任意の2次正方行列\n",
+        "# A =\n",
+        "# \\begin{pmatrix}\n",
+        "#  a & b\\\\\n",
+        "#  c & d\\\\\n",
+        "# \\end{pmatrix}\n",
+        "#   について\n",
+        "# ケイリー・ハミルトンの定理\n",
+        "# A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}$$\n",
         "%%latex\n",
-        "N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n",
-        "\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n",
-        "\\text{then the number of divisers is}\\quad (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n",
-        "\\text{and the sum of them is}\\quad  (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\\n",
         "\\displaystyle\n",
-        "= \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k} \\\\\n",
-        "\\text{N multiples between 1 and Q is} \\quad [ Q \\div N ] \\quad \\text{where} \\quad Q, N \\in \\mathbf{N} \\\\\n",
-        "\\text{where}\\quad [ ]: \\quad \\text{Gause symbol} \\\\\n",
-        "\n",
-        "% 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n",
-        "% [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n",
-        "% 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n",
-        "% ab = lg \n",
-        "% 奇数の和\n",
-        "% 1+3+5+\\cdots+(2n-1)=n^2 \n",
-        "% a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n",
-        "% x = bk , y = -ak （kは整数）\n"
+        "O = \\begin{pmatrix} 0 & 0 \\\\ 0 & 0 \\end{pmatrix}, \\quad\n",
+        "A =\n",
+        "\\begin{pmatrix}\n",
+        " a & b\\\\\n",
+        " c & d\\\\\n",
+        "\\end{pmatrix} \\\\[0.8em]\n",
+        "\\Longrightarrow\n",
+        "A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}\n"
       ],
       "metadata": {
-        "id": "HGZrC8cEEh1U",
-        "outputId": "aa50ccd8-3b5b-4b33-cf86-c51eff92812e",
+        "id": "P37NFrBdOdoI",
+        "outputId": "3600593c-3df3-42dd-fc3b-63a39aa05ca6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 167
+          "height": 93
         }
       },
-      "execution_count": 3,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1226,7 +1398,7 @@
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ],
-            "text/latex": "N=a_1^{p_1} \\cdot a_2^{p_2} \\cdot a_3^{p_3} \\cdots a_k^{p_k} \n\\quad\\text{where}\\quad  a_1,a_2,a_3,\\cdots,a_k \\quad \\text{are primes} \\\\\n\\text{then the number of divisers is}\\quad (p_1+1)(p_2+1)(p_3+1)\\cdots(p_k+1) \\\\\n\\text{and the sum of them is}\\quad  (1+a_1+ \\cdots +a_1^{p_1})(1+a_2+ \\cdots +a_2^{p_2}) \\cdots (1+a_k+ \\cdots +a_k^{p_k})  \\\\\n\\displaystyle\n= \\frac{1 - a_1^{p_1 + 1}}{1 - a_1}  \\frac{1 - a_2^{p_2 + 1}}{1 - a_2} \\cdots \\frac{1 - a_k^{p_k + 1}}{1 - a_k} \\\\\n\\text{N multiples between 1 and Q is} \\quad [ Q \\div N ] \\quad \\text{where} \\quad Q, N \\in \\mathbf{N} \\\\\n\\text{where}\\quad [ ]: \\quad \\text{Gause symbol} \\\\\n\n% 自然数 P, Q, N に対し、 P 以上 Q以下の N の倍数の個数\n% [Q \\div N]-[(P-1) \\div N] ただし、 [x] はガウス記号。\n% 自然数 a , b について、それらの最大公約数を g、最小公倍数を l とすると、以下の関係が成り立つ。\n% ab = lg \n% 奇数の和\n% 1+3+5+\\cdots+(2n-1)=n^2 \n% a,b を互いに素な整数とするとき、1 次不定方程式 ax + by = 0 を満たす整数解は\n% x = bk , y = -ak （kは整数）"
+            "text/latex": "\\displaystyle\nO = \\begin{pmatrix} 0 & 0 \\\\ 0 & 0 \\end{pmatrix}, \\quad\nA =\n\\begin{pmatrix}\n a & b\\\\\n c & d\\\\\n\\end{pmatrix} \\\\[0.8em]\n\\Longrightarrow\nA^2 - (a + d)A + (ad - bc)E = \\mathbf{O}"
           },
           "metadata": {}
         }
@@ -1235,40 +1407,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SWKCGOpjlmq0"
-      },
-      "source": [
-        "---\n",
-        "# 分数\n",
-        "\n",
-        "* $\\displaystyle \\frac{1}{(x+a)(x+b)} = \\frac{1}{b-a}\\left(\\frac{1}{x+a}-\\frac{1}{x+b}\\right) \\qquad (a\\not=b) $\n",
-        "* $\\displaystyle \\frac{1}{k(k+1)} = \\frac{1}{k}-\\frac{1}{k+1} $\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BBJ15STpNlfx"
-      },
-      "source": [
-        "---\n",
-        "# 複素数\n",
-        "\n",
-        "* オイラーの公式 Euler's formula 指数関数と三角関数の関係式\n",
-        "$$\\displaystyle e^{i\\theta}=\\cos \\theta + i \\sin \\theta $$ \n",
-        "\n",
-        "* オイラーの等式 Euler's identity\n",
-        "$$\\displaystyle e^{\\pi i} = -1 $$ \n",
-        "\n",
-        "* 複素数のべき乗 ド・モアブルの定理\n",
-        "$$(\\cos \\theta + i \\sin \\theta)^n = \\cos ( n \\theta) + i \\sin (n \\theta)$$ \n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "P37NFrBdOdoI"
+        "id": "w8kc1exVQ3l0"
       },
       "source": [
         "---\n",
