Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "mathformula.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPdXZYGkXKY/s22g8cXfLyk",
+      "authorship_tag": "ABX9TyMcxtpO38ufg49zt+ed3hZz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1191,7 +1190,7 @@
           "height": 157
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1230,7 +1229,7 @@
           "height": 182
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1267,7 +1266,7 @@
           "height": 82
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1298,7 +1297,7 @@
           "height": 109
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1335,7 +1334,7 @@
           "height": 82
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1344,6 +1343,52 @@
               "<IPython.core.display.Latex object>"
             ],
             "text/latex": "\\displaystyle e^{i\\theta}=\\cos \\theta + i \\sin \\theta  \\\\\n\\displaystyle e^{\\pi i} = -1  \\\\\n(\\cos \\theta + i \\sin \\theta)^n = \\cos ( n \\theta) + i \\sin (n \\theta) \\\\"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 行列\n",
+        "# O をすべての元が 0 である行列（零行列）とし E を単位行列とする。\n",
+        "# 任意の 2 次正方行列 A に対し次が成り立つ。\n",
+        "# A^{-1} = \\frac{1}{ad - bc} \n",
+        "# \\begin{pmatrix} d & -b \\\\ c & a \\end{pmatrix} \\\\[0.8em]\n",
+        "# ケイリー・ハミルトンの定理\n",
+        "# A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "O = \\begin{pmatrix} 0 & 0 \\\\ 0 & 0 \\end{pmatrix}, \\quad\n",
+        "E = \\begin{pmatrix} 1 & 0 \\\\ 0 & 1 \\end{pmatrix}, \\quad\n",
+        "A =\n",
+        "\\begin{pmatrix}\n",
+        " a & b\\\\\n",
+        " c & d\\\\\n",
+        "\\end{pmatrix} \\\\[0.8em]\n",
+        "A^{-1} = \\frac{1}{ad - bc} \n",
+        "\\begin{pmatrix} d & -b \\\\ c & a \\end{pmatrix} \n",
+        "\\quad \\text{where}\\quad ad-bc \\neq 0 \\\\[0.8em]\n",
+        "A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}"
+      ],
+      "metadata": {
+        "id": "P37NFrBdOdoI",
+        "outputId": "205d976f-ff44-436c-aa8a-cfcfae387915",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 147
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nO = \\begin{pmatrix} 0 & 0 \\\\ 0 & 0 \\end{pmatrix}, \\quad\nE = \\begin{pmatrix} 1 & 0 \\\\ 0 & 1 \\end{pmatrix}, \\quad\nA =\n\\begin{pmatrix}\n a & b\\\\\n c & d\\\\\n\\end{pmatrix} \\\\[0.8em]\nA^{-1} = \\frac{1}{ad - bc} \n\\begin{pmatrix} d & -b \\\\ c & a \\end{pmatrix} \n\\quad \\text{where}\\quad ad-bc \\neq 0 \\\\[0.8em]\nA^2 - (a + d)A + (ad - bc)E = \\mathbf{O}"
           },
           "metadata": {}
         }
@@ -1361,36 +1406,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# 行列\n",
-        "# $E$を2次単位行列、 $O$ を $2 \\times 2$ の零行列とすると、任意の2次正方行列\n",
-        "# A =\n",
-        "# \\begin{pmatrix}\n",
-        "#  a & b\\\\\n",
-        "#  c & d\\\\\n",
-        "# \\end{pmatrix}\n",
-        "#   について\n",
-        "# ケイリー・ハミルトンの定理\n",
-        "# A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}$$\n",
+        "# 一次変換\n",
+        "# 原点を中心とする \\theta 回転\n",
+        "# 原点に関する対称移動 (\\theta = \\pi)\n",
+        "# 直線 x \\sin \\theta - y cos \\theta = 0 に関する対称移動\n",
+        "# x 軸に関する対称移動 (\\theta = 0)\n",
+        "# y 軸に関する対称移動 (\\theta = \\frac \\pi 2)\n",
+        "# 直線 y = x に関する対称移動 (\\theta = \\frac \\pi 4)\n",
+        "# 直線 y = -x に関する対称移動 (\\theta = \\frac {3\\pi} 4)\n",
         "%%latex\n",
+        "\\theta \\Longrightarrow\n",
+        "\\begin{pmatrix} cos \\theta & -\\sin \\theta \\\\ \\sin \\theta & cos \\theta \\end{pmatrix} \\\\[0.8em]\n",
+        "(\\theta = \\pi) \\Longrightarrow\n",
+        "\\begin{pmatrix} -1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\\\[0.8em]\n",
+        "(x \\sin \\theta - y cos \\theta = 0) \\Longrightarrow\n",
+        "\\begin{pmatrix} cos {2\\theta} & \\sin {2\\theta} \\\\ \\sin {2\\theta} & -cos {2\\theta} \\end{pmatrix} \\\\[0.8em]\n",
+        "(\\theta = 0) \\Longrightarrow\n",
+        "\\begin{pmatrix} 1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\\\[0.8em]\n",
         "\\displaystyle\n",
-        "O = \\begin{pmatrix} 0 & 0 \\\\ 0 & 0 \\end{pmatrix}, \\quad\n",
-        "A =\n",
-        "\\begin{pmatrix}\n",
-        " a & b\\\\\n",
-        " c & d\\\\\n",
-        "\\end{pmatrix} \\\\[0.8em]\n",
-        "\\Longrightarrow\n",
-        "A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}\n"
+        "(\\theta = \\frac \\pi 2) \\Longrightarrow\n",
+        "\\begin{pmatrix} -1 & 0 \\\\ 0 & 1 \\end{pmatrix} \\\\[0.8em]\n",
+        "(\\theta = \\frac \\pi 4) \\Longrightarrow\n",
+        "\\begin{pmatrix} 0 & 1 \\\\ 1 & 0 \\end{pmatrix} \\\\[0.8em]\n",
+        "(\\theta = \\frac {3\\pi} 4) \\Longrightarrow\n",
+        "\\begin{pmatrix} 0 & -1 \\\\ -1 & 0 \\end{pmatrix}"
       ],
       "metadata": {
-        "id": "P37NFrBdOdoI",
-        "outputId": "3600593c-3df3-42dd-fc3b-63a39aa05ca6",
+        "id": "8Sd4OPkselw_",
+        "outputId": "eb87aec5-5780-4e73-cb99-18ea87ff2f37",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 93
+          "height": 383
         }
       },
-      "execution_count": 31,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1398,32 +1447,22 @@
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ],
-            "text/latex": "\\displaystyle\nO = \\begin{pmatrix} 0 & 0 \\\\ 0 & 0 \\end{pmatrix}, \\quad\nA =\n\\begin{pmatrix}\n a & b\\\\\n c & d\\\\\n\\end{pmatrix} \\\\[0.8em]\n\\Longrightarrow\nA^2 - (a + d)A + (ad - bc)E = \\mathbf{O}"
+            "text/latex": "\\theta \\Longrightarrow\n\\begin{pmatrix} cos \\theta & -\\sin \\theta \\\\ \\sin \\theta & cos \\theta \\end{pmatrix} \\\\[0.8em]\n(\\theta = \\pi) \\Longrightarrow\n\\begin{pmatrix} -1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\\\[0.8em]\n(x \\sin \\theta - y cos \\theta = 0) \\Longrightarrow\n\\begin{pmatrix} cos {2\\theta} & \\sin {2\\theta} \\\\ \\sin {2\\theta} & -cos {2\\theta} \\end{pmatrix} \\\\[0.8em]\n(\\theta = 0) \\Longrightarrow\n\\begin{pmatrix} 1 & 0 \\\\ 0 & -1 \\end{pmatrix} \\\\[0.8em]\n\\displaystyle\n(\\theta = \\frac \\pi 2) \\Longrightarrow\n\\begin{pmatrix} -1 & 0 \\\\ 0 & 1 \\end{pmatrix} \\\\[0.8em]\n(\\theta = \\frac \\pi 4) \\Longrightarrow\n\\begin{pmatrix} 0 & 1 \\\\ 1 & 0 \\end{pmatrix} \\\\[0.8em]\n(\\theta = \\frac {3\\pi} 4) \\Longrightarrow\n\\begin{pmatrix} 0 & -1 \\\\ -1 & 0 \\end{pmatrix}"
           },
           "metadata": {}
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "w8kc1exVQ3l0"
-      },
+      "cell_type": "code",
       "source": [
-        "---\n",
-        "# 行列\n",
-        "$E$を2次単位行列、 $O$ を $2 \\times 2$ の零行列とすると、任意の2次正方行列\n",
-        "$$A =\n",
-        "\\begin{pmatrix}\n",
-        " a & b\\\\\n",
-        " c & d\\\\\n",
-        "\\end{pmatrix}\n",
-        "$$  について\n",
-        "\n",
-        "ケイリー・ハミルトンの定理\n",
-        "\n",
-        "$$A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}$$\n"
-      ]
+        ""
+      ],
+      "metadata": {
+        "id": "ZGKh711uelnw"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
