Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "mathformula.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcxtpO38ufg49zt+ed3hZz",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOIubvhcwdsnRz+qtSgZfvs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1380,7 +1381,7 @@
           "height": 147
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1393,15 +1394,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "idehjX6MygPk"
-      }
     },
     {
       "cell_type": "code",
@@ -1439,7 +1431,7 @@
           "height": 383
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1456,98 +1448,163 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 集合\n",
+        "# 演算規則\n",
+        "# 交換法則 commutative law\n",
+        "# 結合法則 associative law\n",
+        "# 分配法則 distributive law\n",
+        "# ド・モルガンの法則\n",
+        "# 集合の要素の個数\n",
+        "%%latex\n",
+        "A \\cap B=B \\cap A, \\quad A \\cup B=B \\cup A \\\\\n",
+        "A \\cap B \\cap C=(A \\cap B) \\cap C=A \\cap (B \\cap C), \\quad A \\cup B \\cup C=(A \\cup B) \\cup C=A \\cup (B \\cup C) \\\\\n",
+        "A \\cap (B \\cup C)=(A \\cap B) \\cup (A \\cap C),\\quad A \\cup (B \\cap C)=(A \\cup B) \\cap (A \\cup C) \\\\\n",
+        "\\overline{A \\cap B}=\\overline{A} \\cup \\overline{B},\\quad \\overline{A \\cup B}=\\overline{A} \\cap \\overline{B} \\\\\n",
+        "n(A \\cup B \\cup C)=n(A) + n(B) + n(C) - n(A \\cap B) - n(B \\cap C) - n(C \\cap A) + n(A \\cap B \\cap C)  \\\\"
       ],
       "metadata": {
-        "id": "ZGKh711uelnw"
+        "id": "2J40Za4APWjh",
+        "outputId": "caf7b406-612e-4563-f335-9db94cc59683",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2J40Za4APWjh"
-      },
-      "source": [
-        "---\n",
-        "# 集合\n",
-        "\n",
-        "演算規則\n",
-        "* 交換法則 $\\qquad A \\cap B=B \\cap A, \\quad A \\cup B=B \\cup A$\n",
-        "* 結合法則 $\\qquad A \\cap B \\cap C=(A \\cap B) \\cap C=A \\cap (B \\cap C), \\quad A \\cup B \\cup C=(A \\cup B) \\cup C=A \\cup (B \\cup C)$\n",
-        "* 分配法則 $\\qquad A \\cap (B \\cup C)=(A \\cap B) \\cup (A \\cap C),\\quad A \\cup (B \\cap C)=(A \\cup B) \\cap (A \\cup C)$\n",
-        "\n",
-        "cf. commutative law, associative law, distributive law\n",
-        "\n",
-        "* ド・モルガンの法則 $\\qquad \\overline{A \\cap B}=\\overline{A} \\cup \\overline{B},\\quad \\overline{A \\cup B}=\\overline{A} \\cap \\overline{B}$\n",
-        "* 集合の要素の個数\n",
-        "$$n(A \\cup B \\cup C)=n(A) + n(B) + n(C) - n(A \\cap B) - n(B \\cap C) - n(C \\cap A) + n(A \\cap B \\cap C)$$ \n"
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "A \\cap B=B \\cap A, \\quad A \\cup B=B \\cup A \\\\\nA \\cap B \\cap C=(A \\cap B) \\cap C=A \\cap (B \\cap C), \\quad A \\cup B \\cup C=(A \\cup B) \\cup C=A \\cup (B \\cup C) \\\\\nA \\cap (B \\cup C)=(A \\cap B) \\cup (A \\cap C),\\quad A \\cup (B \\cap C)=(A \\cup B) \\cap (A \\cup C) \\\\\n\\overline{A \\cap B}=\\overline{A} \\cup \\overline{B},\\quad \\overline{A \\cup B}=\\overline{A} \\cap \\overline{B} \\\\\nn(A \\cup B \\cup C)=n(A) + n(B) + n(C) - n(A \\cap B) - n(B \\cap C) - n(C \\cap A) + n(A \\cap B \\cap C)  \\\\"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KcEiTpCQPzfx"
-      },
+      "cell_type": "code",
       "source": [
-        "---\n",
         "# 初等関数の性質\n",
-        "\n",
-        "$x$ を $a$ から $b$ まで変化させたときの関数 $f(x)$ の変化の割合（平均変化率）\n",
-        "\n",
-        "$$\\frac{f(b)-f(a)}{b-a} $$ \n"
+        "# x を a から b まで変化させたときの関数 f(x) の変化の割合（平均変化率）\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\frac{f(b)-f(a)}{b-a}  "
+      ],
+      "metadata": {
+        "id": "KcEiTpCQPzfx",
+        "outputId": "3a0534ac-4324-44ea-e2f4-406f94eec71a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\frac{f(b)-f(a)}{b-a}  "
+          },
+          "metadata": {}
+        }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yMeaoeJDehMB"
-      },
+      "cell_type": "code",
       "source": [
-        "---\n",
         "# 一次関数\n",
-        "* 2点  $(a_1, b_1), (a_2, b_2)$  を通る直線の式\n",
-        "\n",
-        "$$y=\\frac{b_2-b_1}{a_2-a_1}(x-a_1)+b_1 $$ \n",
-        "\n",
-        "* 2点  $x$ 切片 $(a, 0)$, $y$ 切片 $(0, b)$ （ただし、ab≠0とする）を通る直線の式\n",
-        "\n",
-        "$$\\frac{x}{a}+\\frac{y}{b}=1 $$ \n",
-        "\n",
-        "* 点  $(x_0, y_0)$  を通り、傾き  $c$  の直線の式\n",
-        "\n",
-        "$$y-y_0=c(x-x_0) $$ \n",
-        "\n",
-        "* 傾き  $c$  を方向ベクトル $(a, b)$ と捉えると\n",
-        "\n",
-        "$$\\frac{x-x_0}a=\\frac{y-y_0}b $$ \n"
+        "# 2点  (a_1, b_1), (a_2, b_2)  を通る直線の式\n",
+        "# 2点  x 切片 (a, 0), y 切片 (0, b) （ただし、ab≠0とする）を通る直線の式\n",
+        "# 点  (x_0, y_0)  を通り、傾き  c  の直線の式\n",
+        "# 傾き  c  を方向ベクトル (a, b) と捉えると\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "y=\\frac{b_2-b_1}{a_2-a_1}(x-a_1)+b_1  \\\\[0.8em]\n",
+        "\\frac{x}{a}+\\frac{y}{b}=1 \\quad\\text{where}\\quad ab \\not = 0 \\\\[0.8em]\n",
+        "y - y_0 = c (x - x_0)  \\\\[0.8em]\n",
+        "\\frac{x - x_0} a = \\frac{y - y_0} b"
+      ],
+      "metadata": {
+        "id": "yMeaoeJDehMB",
+        "outputId": "b6c611a7-71ab-41c5-883f-a03225bc8bb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\ny=\\frac{b_2-b_1}{a_2-a_1}(x-a_1)+b_1  \\\\[0.8em]\n\\frac{x}{a}+\\frac{y}{b}=1 \\quad\\text{where}\\quad ab \\not = 0 \\\\[0.8em]\ny - y_0 = c (x - x_0)  \\\\[0.8em]\n\\frac{x - x_0} a = \\frac{y - y_0} b  "
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 接線の方程式\n",
+        "# 関数 f(x) のグラフ上の点 (x_1, y_1) における接線\n",
+        "# 楕円 \\frac{x^{2}}{a^{2}} + \\frac{y^{2}}{b^{2}} = 1 \n",
+        "# 上の点 (x_1, y_1) における接線\n",
+        "# \\frac{x_{1}x}{a^{2}} + \\frac{y_{1}y}{b^{2}} = 1 \n",
+        "# 双曲線 \\frac{x^{2}}{a^{2}} - \\frac{y^{2}}{b^{2}} = 1 \n",
+        "# 上の点 (x_1, y_1) における接線\n",
+        "# \\frac{x_{1}x}{a^{2}} - \\frac{y_{1}y}{b^{2}} = 1 \n",
+        "# 放物線 y^2 = 4px 上の点 (x_1, y_1) における接線\n",
+        "# y_1y = 2p(x + x_1) \n",
+        "%%latex\n",
+        "y - y_1=f^\\prime(x)(x - x_1) \\\\[0.8em]\n",
+        "\\displaystyle\n",
+        "\\frac{x^{2}}{a^{2}} + \\frac{y^{2}}{b^{2}} = 1 \\\\[0.8em]\n",
+        "\\frac{x_{1}x}{a^{2}} + \\frac{y_{1}y}{b^{2}} = 1 \\\\[0.8em]\n",
+        "\\frac{x^{2}}{a^{2}} - \\frac{y^{2}}{b^{2}} = 1 \\\\[0.8em]\n",
+        "% \\frac{x_{1}x}{a^{2}} - \\frac{y_{1}y}{b^{2}} = 1 \\\\[0.8em]\n",
+        "y^2 = 4px \\\\[0.8em]\n",
+        "y_1y = 2p(x + x_1) "
+      ],
+      "metadata": {
+        "id": "LUsscIVces_G",
+        "outputId": "2ea60f4e-11e3-4e3a-a8d1-5b34439f9e94",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "y - y_1=f^\\prime(x)(x - x_1) \\\\[0.8em]\n\\displaystyle\n\\frac{x^{2}}{a^{2}} + \\frac{y^{2}}{b^{2}} = 1 \\\\[0.8em]\n\\frac{x_{1}x}{a^{2}} + \\frac{y_{1}y}{b^{2}} = 1 \\\\[0.8em]\n\\frac{x^{2}}{a^{2}} - \\frac{y^{2}}{b^{2}} = 1 \\\\[0.8em]\n% \\frac{x_{1}x}{a^{2}} - \\frac{y_{1}y}{b^{2}} = 1 \\\\[0.8em]\ny^2 = 4px \\\\[0.8em]\ny_1y = 2p(x + x_1) "
+          },
+          "metadata": {}
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "LUsscIVces_G"
-      },
       "source": [
-        "---\n",
-        "# 接線の方程式\n",
-        "* 関数 $f(x)$ のグラフ上の点 $(x_1, y_1)$ における接線\n",
-        "\n",
-        "$$y - y_1=f^\\prime(x)(x - x_1) $$ \n",
-        "\n",
-        "* 楕円 $$\\frac{x^{2}}{a^{2}} + \\frac{y^{2}}{b^{2}} = 1$$ 上の点 $(x_1, y_1)$ における接線\n",
-        "\n",
-        "$$\\frac{x_{1}x}{a^{2}} + \\frac{y_{1}y}{b^{2}} = 1$$ \n",
-        "\n",
-        "* 双曲線 $$\\frac{x^{2}}{a^{2}} - \\frac{y^{2}}{b^{2}} = 1$$ 上の点 $(x_1, y_1)$ における接線\n",
-        "\n",
-        "$$\\frac{x_{1}x}{a^{2}} - \\frac{y_{1}y}{b^{2}} = 1$$ \n",
-        "\n",
-        "* 放物線 $$y^2 = 4px$$ 上の点 $(x_1, y_1)$ における接線\n",
-        "\n",
-        "$$y_1y = 2p(x + x_1)$$ \n"
-      ]
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "idehjX6MygPk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1693,7 +1750,6 @@
         "id": "j135KEgOhMCX"
       },
       "source": [
-        "\n",
         "## 指数関数・対数関数\n",
         "以下、この節内では  $a$ ,  $b$  , $c$  は実数とする。\n",
         "\n",
